add localisation (L10n) notes for error pages and Private Browsing splash page (for issue #625; related to PR #626)

--- a/app/src/main/res/raw/private_mode.html
+++ b/app/src/main/res/raw/private_mode.html
@@ -19,6 +19,7 @@
         </svg>
         <div class="container">
             <svg class="icon"><use xlink:href="#icon-private"></use></svg>
+            <h1>%pageTitle%</h1>
             <section class="section-main">%pageBody%</section>
         </div>
         <script>
